feat(plugin): fix plugin version